--- a/src/main/resources/static/bootstrap/site/layouts/shortcodes/example.html
+++ b/src/main/resources/static/bootstrap/site/layouts/shortcodes/example.html
@@ -40,7 +40,7 @@
       </div>
     {{- end -}}
 
-    {{- $content := replaceRE `<svg class="bd-placeholder-img(?:-lg)?(?: *?bd-placeholder-img-lg)? ?(.*?)".*?<\/svg>\n` `<img src="..." class="$1" alt="...">` $input -}}
+    {{- $content := replaceRE `<svg class="bd-placeholder-img(?:-lg)?(?: *?bd-placeholder-img-lg)? ?(.*?)"></svg>\n` `<img src="..." class="$1" alt="...">` $input -}}
     {{- $content = replaceRE ` (class=" *?")` "" $content -}}
     {{- highlight (trim $content "\n") $lang "" -}}
   {{- end -}}
